SHELL: basic error checking

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -1,10 +1,12 @@
 CC = gcc 
-CFLAGS = -g -Wall -lreadline
-OBJS = shell.o
+CFLAGS = -Wall -g -lreadline
+OBJS = main.o shell.o
 
 shell: $(OBJS)
 	$(CC) $(CFLAGS) -o shell $(OBJS)
-shell.o: shell.c
+main.o: main.c 
+	$(CC) $(CFLAGS) -c main.c -o main.o
+shell.o: shell.c shell.h
 	$(CC) $(CFLAGS) -c shell.c -o shell.o 
 clean: 
 	rm *.o shell
